--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -9,7 +9,7 @@ submenu: true
    Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.
    Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.    
    Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.   
-   Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является **ГОСТ** __[23479-79]({% link Bufer tekst/ГОСТ 23479-79.pdf %})__  «Контроль неразрушающий. Методы оптического вида» и **РД** __[03-606-03]({% link Bufer tekst/РД 03-606-03.pdf %})__ 
+   Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является **ГОСТ** __[23479-79]({% link Bufer tekst/ГОСТ 23479-79.pdf %}){:target="blank"}__  «Контроль неразрушающий. Методы оптического вида» и **РД** __[03-606-03]({% link Bufer tekst/РД 03-606-03.pdf %}){:target="blank"}__ 
 
 __2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
 (вставить фото)
@@ -21,7 +21,7 @@ __2. [Электро-векторное картирование]({% link 6.1.2.
 **3. Ультразвуковой неразрушающий контроль.**   
     Ультразвуковая толщинометрия – наиболее прогрессивный метод неразрушимого контроля. Позволяет эффективно проводить исследования на различных объектах, без приостановления их эксплуатации, а также при доступе к объекту с одной стороны. Гарантированно даёт результат с минимальной погрешностью. Является безальтернативным методам, если доступ к объекту есть только с одной стороны.   
     Ультразвуковая толщинометрия металла применяется для определения фактической толщины металла. Кроме того, такой метод позволяет определить размеры детали оборудования без их демонтажа. Например, элементы трубопровода, валы, шпильки и т.п. Позволяет досконально изучить различные материалы, сварные швы и соединения и выявить мельчайшие дефекты.    
-    Ультразвуковая толщинометрия проводится в соответствии с **ГОСТ Р** __[55724]({% link Bufer tekst/ГОСТ Р 55724.pdf %})__    
+    Ультразвуковая толщинометрия проводится в соответствии с **ГОСТ Р** __[55724]({% link Bufer tekst/ГОСТ Р 55724.pdf %}){:target="blank"}__    
 
    **Ультразвуковой контроль металлоконструкций**   
     Посредством специального оборудования – дефектоскопа - исследуется прочность изделия, наличие или отсутствие трещин, сколов и прочих дефектов, а также качество сварных швов и соединений. Ультразвуковая дефектоскопия является действенной при выявлении воздушных пустот, химически неоднородного состава (например, шлаковые вложения в металле) и выявления присутствия неметаллических элементов.
@@ -43,13 +43,13 @@ __2. [Электро-векторное картирование]({% link 6.1.2.
    Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
 **5. Тепловизионное обследование.**   
-Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** __[54852_2011]({% link Bufer tekst/GOST_R_54852_2011.pdf %})__ «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
+Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** __[54852_2011]({% link Bufer tekst/GOST_R_54852_2011.pdf %}){:target="blank"}__ «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
 
-* Область применение тепловизора:  
+ Область применение тепловизора:  
 1) Диагностика дефектов ограждающих конструкций и обеспечение качества строительства (особенно герметичности окон и дверей и.т.д.).  
 2) Мониторинг теплопотерь.      
 3) Помощь при превентивной диагностике.   
- * Типичные задачи для тепловизора:
+  Типичные задачи для тепловизора:
 - Быстрая локализация горячих точек в электрических установках.  
 - Выявление мест аномального нагрева.  
 
