--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -7,9 +7,8 @@ submenu: true
 
 **1. Визуальный неразрушающий контроль.**   
     Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.  
-    
     Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.       
-    Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.      
+*   Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.      
     Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является **ГОСТ** __[23479-79]({% link Bufer tekst/ГОСТ 23479-79.pdf %}){:target="blank"}__  «Контроль неразрушающий. Методы оптического вида» и **РД** __[03-606-03]({% link Bufer tekst/РД 03-606-03.pdf %}){:target="blank"}__ 
 
 __2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
