--- a/1.3_.md
+++ b/1.3_.md
@@ -5,11 +5,11 @@ sortid: 1.3
 submenu: true
 ---
 
-**Нужен доступ?**   
-Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**  
-Опыт в управлении сложными работами на высоте, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.  
-Опыт работы в замкнутом пространстве, команда включает в себя высококвалифицированных специалистов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для работы в сложных условиях.  
-Мы следуем правилам техники безопасности, а также учитываем правила техники безопасности, установленные на Вашем объекте.
+### Нужен доступ?   
+` ` Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**  
+` ` Опыт в управлении сложными работами на высоте, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.  
+` ` Опыт работы в замкнутом пространстве, команда включает в себя высококвалифицированных специалистов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для работы в сложных условиях.  
+` ` *Мы следуем правилам техники безопасности, а также учитываем правила техники безопасности, установленные на Вашем объекте.*
 
 
 ### Что обследуем?
