--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -11,8 +11,8 @@ submenu: true
 ![](/img/0/1.2.1.0.6000.jpg)   
 
 ` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
-` ` Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
-` ` На сегодняшний день __ЭВК - единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+ Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
+ На сегодняшний день __ЭВК - единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
 
 #### [Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев]({% link 6.1.2.0_evk.md %})
  а) Система эксплуатируемой крыши с зелеными насаждениями.  
@@ -31,28 +31,36 @@ submenu: true
 
 #### 3. Качество монтажа кровельных материалов.  
 ![](/img/0/1.2.3.6000.jpg)  
+
 ` ` Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
 #### 4. Определение мест утечки тепла.  
 ВСТАВИТЬ ФОТО     
+
 ` ` Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
 #### 5. Опорные металлические конструкции.  
 ВСТАВИТЬ ФОТО  
+
 ` ` Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
+
 ` ` Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
 #### 6. Несущая способность кровли.    
+
 ` ` Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
 
 #### 7. Деревянная конструкция кровли.
 ![](/img/0/1.2.7.6000.1.jpg)    
+
 ` ` Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
 #### 8. Инфракрасная термография.    
 ВСТАВИТЬ ФОТО  
+
 ` ` Метод обнаружения скопления влаги под кровельным покрытием.   
-` ` Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими. В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.    
+ Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими. В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.  
+ 
 ` ` Во время продолжительной солнечной погоды без осадков, поверхность в утренние часы специально обильно поливается водой, чтобы та проникла через все дефекты и скопилась под поверхностью гидроизоляции. Тепловизором обследуется и снимается вся поверхность сплошным методом с последующей склейкой в панорамные ИК-изображения для четкой идентификации аномалий по месту. Найденные дефекты маркируются и снимаются крупным планом. Указанный метод позволяет с достаточной точностью определить границы зоны проникновения влаги в верхние слои кровельного "пирога", но не дает возможности указать точное место повреждения (протечки).
 
 
