--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -7,11 +7,9 @@ submenu: true
 
 ### 1. Визуальный неразрушающий контроль.
 
-` ` Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.
-
-` ` Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.
-
-` ` Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.
+` ` Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.  
+Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.  
+Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.
 
 ` ` Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является **ГОСТ** {% include el-pdf.html text="23479-79" name="ГОСТ 23479-79.pdf" %}  «Контроль неразрушающий. Методы оптического вида» и **РД** 
        {% include el-pdf.html text="03-606-03" name="РД 03-606-03.pdf" %} 
