--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -17,7 +17,7 @@ submenu: true
        
        
 
-### __2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
+### 2. __[Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
 (вставить фото)
 
 ` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
@@ -45,12 +45,14 @@ submenu: true
 ` ` Принцип работы ударно-импульсного оборудования заключается в проверке показателей твердости и упругости строительной конструкции с помощью ударного импульса. Для этого проводится серия ударов  в одно место поверхности стройконструкции. Далее прибор производит пересчет полученных значений и определяет средний показатель. На основании полученного показателя и определяется фактическая марка бетона строительной конструкции.
 
 **Метод ударного импульса**
+
 ` ` Метод ударного импульса – самый распространённый среди неразрушающих методов из-за простоты измерений. Он позволяет определять класс бетона, производить измерения под разными углами к поверхности, учитывать пластичность и упругость бетона.     
 Суть метода:  
 Боёк со сферическим ударником под действием пружины ударяется о поверхность. Энергия удара расходуется на деформации бетона. В результате пластических деформаций образуется лунка, в результате упругих возникает реактивная сила. Электромеханический преобразователь превращает механическую энергию удара в электрический импульс. Результаты выдаются в единицах измерения прочности на сжатие.   
 К достоинствам метода относят оперативность, низкие трудозатраты, отсутствие сложных вычислений, слабую зависимость от состава бетона. Недостатком считается определение прочности в слое глубиной до 50 мм.
  
 **Метод упругого отскока**
+
 ` ` Метод упругого отскока заимствован из практики определения твёрдости металла. Для испытаний применяют склерометры – пружинные молотки со сферическими штампами. Система пружин допускает свободный отскок после удара. Шкала со стрелкой фиксирует путь ударника при отскоке. Прочность бетона определяют по градуировочным кривым, которые учитывают положение молотка, так как величина отскока зависит от его направления. Среднюю величину вычисляют по данным 5-10 измерений, выполненных на определённом участке. Расстояние между местами ударов – от 30 мм.
 
 ` ` Диапазон измерений методом упругого отскока – 5-50 МПа. К достоинствам метода относят простоту и скорость измерений, возможность оценки прочности густоармированных конструкций. Ключевые недостатки такие же, как у других ударных методов: контроль прочности в поверхностном слое (глубина 20-30 мм), необходимость частых поверок (каждые 500 ударов), построение градуировочных зависимостей.
