--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -59,7 +59,8 @@ submenu: true
 
 ` ` Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
-### 5. Тепловизионное обследование.
+### 5. Тепловизионное обследование.  
+ВСТАВИТЬ ФОТО
 
 ` ` Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** 
 {% include el-pdf.html text="54852_2011" name="GOST_R_54852_2011.pdf" %} «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
