--- a/2.0_access.md
+++ b/2.0_access.md
@@ -6,24 +6,29 @@ sortid: 2.0
 submenu: true
 ---
 
-Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.
-Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей. 
+` ` Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
+Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей.   
 Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь. Возможна установка временного или постоянного, безопасного пути на вашем объекте.
-Инженерное сооружение
-Труднодоступное инженерное проектирование - это наша специальность. 
-Проводим проверку и обслуживания систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.
-Конструирование: дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур. 
-Разработаем систему, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.
-Обучим Ваш персонал использованию новых систем безопасности. 
-Системы доступа, которые мы проектируем, умны, безопасны и экономически эффективны. 
 
-Проведем инструктаж по технике безопасности, методам работы со спец снаряжением.
-Обеспечим сопровождение Вашего сотрудника на всем протяжении маршрута. 
+
+### Инженерное сооружение
+
+` ` Труднодоступное инженерное проектирование - это наша специальность. 
+**Проводим проверку и обслуживания** систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.  
+**Конструирование:** дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур.   
+**Разработаем систему**, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.  
+**Обучим** Ваш персонал использованию новых систем безопасности.   
+*Системы доступа, которые мы проектируем, умны, безопасны и экономически эффективны.* 
+
+- Проведем инструктаж по технике безопасности, методам работы со спец снаряжением.
+- Обеспечим сопровождение Вашего сотрудника на всем протяжении маршрута. 
  
-Безопасность
-Обладая многолетним практическим опытом, разрабатываем решения по обеспечению безопасности на высоте, применяя новые производственные технологии, методологии и инновации в области СИЗ, чтобы помочь операторам и специалистам по безопасности ориентироваться и производить практические шаги для управления опасностями, возникающими при работе на высоте.
+### Безопасность
 
-Безопасность Высоты и оценка рисков
-Команда компании уделяет большое внимание вопросам безопасности и оценки рисков, и благодаря тому, что сотрудники активно работают в этих условиях, мы обладаем практическими знаниями и глубоким пониманием характеристик, опасностей и законодательных требований, необходимых для безопасной эксплуатации. Эта приверженность безопасности и опыт эксплуатации позволяют компании предоставлять экспертные консультационные услуги в условиях повышенного риска.
+` ` Обладая многолетним практическим опытом, разрабатываем решения по обеспечению безопасности на высоте, применяя новые производственные технологии, методологии и инновации в области СИЗ, чтобы помочь операторам и специалистам по безопасности ориентироваться и производить практические шаги для управления опасностями, возникающими при работе на высоте.
 
-Мы гибки и быстры, и мы можем проектировать решения для сложных ситуаций.
+### Безопасность Высоты и оценка рисков
+
+` ` Команда компании уделяет большое внимание вопросам безопасности и оценки рисков, и благодаря тому, что сотрудники активно работают в этих условиях, мы обладаем практическими знаниями и глубоким пониманием характеристик, опасностей и законодательных требований, необходимых для безопасной эксплуатации. Эта приверженность безопасности и опыт эксплуатации позволяют компании предоставлять экспертные консультационные услуги в условиях повышенного риска.
+
+*Мы гибки и быстры, и мы можем проектировать решения для сложных ситуаций.*
