--- a/2.0_access.md
+++ b/2.0_access.md
@@ -13,11 +13,11 @@ submenu: true
 
 ### Инженерное сооружение
 
-` ` Труднодоступное инженерное проектирование - это наша специальность. 
-**Проводим проверку и обслуживания** систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.  
-**Конструирование:** дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур.   
-**Разработаем систему**, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.  
-**Обучим** Ваш персонал использованию новых систем безопасности.   
+` ` Труднодоступное инженерное проектирование - это наша специальность.   
+- **Проводим проверку и обслуживания** систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.  
+- **Конструирование:** дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур.   
+- **Разработаем систему**, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.  
+- **Обучим** Ваш персонал использованию новых систем безопасности.   
 *Системы доступа, которые мы проектируем, умны, безопасны и экономически эффективны.* 
 
 - Проведем инструктаж по технике безопасности, методам работы со спец снаряжением.
