--- a/2.0_access.md
+++ b/2.0_access.md
@@ -8,7 +8,8 @@ submenu: true
 
 ` ` Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
 Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей.   
-Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь. Возможна установка временного или постоянного, безопасного пути на вашем объекте.
+Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь.   
+Возможна установка временного или постоянного, безопасного пути на вашем объекте.
 
 
 ### Инженерное сооружение
