--- a/2.1_.md
+++ b/2.1_.md
@@ -5,10 +5,11 @@ sortid: 2.1
 submenu: true
 ---
 
-Опасным производственным фактором работ на высоте является расположение рабочего места на высоте от земли, пола или другой поверхности и связанная с этим возможность падения работника с высоты или падения предметов на работника.
+` ` Опасным производственным фактором работ на высоте является расположение рабочего места на высоте от земли, пола или другой поверхности и связанная с этим возможность падения работника с высоты или падения предметов на работника.
  
-К работам на высоте относятся работы, при которых:
-а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:
+` ` *К работам на высоте относятся работы, при которых:*
+
+1 а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:  
 при осуществлении работником подъема на высоту более 5 м, или спуска с высоты более 5 м по лестнице, угол наклона которой к горизонтальной поверхности составляет более 75°;
 при проведении работ на площадках на расстоянии ближе 2 м от неогражденных перепадов по высоте более 1,8 м, а также, если высота защитного ограждения этих площадок менее 1,1 м;
 б) существуют риски, связанные с возможным падением работника с высоты менее 1,8 м, если работа проводится над машинами или механизмами, поверхностью жидкости или сыпучих мелкодисперсных материалов, выступающими предметами.
