--- a/2.1_.md
+++ b/2.1_.md
@@ -9,16 +9,16 @@ submenu: true
  
 ` ` **К работам на высоте относятся работы, при которых:**
 
-1. а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:  
+- а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:  
 при осуществлении работником подъема на высоту более 5 м, или спуска с высоты более 5 м по лестнице, угол наклона которой к горизонтальной поверхности составляет более 75°;  
 при проведении работ на площадках на расстоянии ближе 2 м от неогражденных перепадов по высоте более 1,8 м, а также, если высота защитного ограждения этих площадок менее 1,1 м;  
-1. б) существуют риски, связанные с возможным падением работника с высоты менее 1,8 м, если работа проводится над машинами или механизмами, поверхностью жидкости или сыпучих мелкодисперсных материалов, выступающими предметами.
-(п. 3 в ред. Приказа Минтруда России от 17.06.2015 N 383н) (ссылка на Буфер № 6.2.2.1.)
+- б) существуют риски, связанные с возможным падением работника с высоты менее 1,8 м, если работа проводится над машинами или механизмами, поверхностью жидкости или сыпучих мелкодисперсных материалов, выступающими предметами.
+(п. 3. Приказа от 28 марта 2014 г. {% include el-pdf.html text="N 155н" name="N 155н.pdf" %} ОБ УТВЕРЖДЕНИИ ПРАВИЛ ПО ОХРАНЕ ТРУДА ПРИ РАБОТЕ НА ВЫСОТЕ (в ред. Приказа Минтруда России от 17.06.2015 N 383н))
 
 ` ` **В зависимости от условий производства все работы на высоте делятся на:**
 
 - а) работы на высоте с применением средств подмащивания (например, леса, подмости, вышки, люльки, лестницы и другие средства подмащивания), а также работы, выполняемые на площадках с защитными ограждениями высотой 1,1 м и более;
--  б) работы без применения средств подмащивания, выполняемые на высоте 5 м и более, а также работы, выполняемые на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м.
+- б) работы без применения средств подмащивания, выполняемые на высоте 5 м и более, а также работы, выполняемые на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м.
 (п. 3.1 введен Приказом Минтруда России от 17.06.2015 N 383н) (ссылка на Буфер № 6.2.2.1.)
 
 Работникам, допускаемым к работам без применения средств подмащивания, выполняемые на высоте 5 м и более, а также выполняемым на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м, по заданию работодателя на производство работ выдается оформленный на специальном бланке наряд-допуск на производство работ (далее - наряд-допуск), рекомендуемый образец которого предусмотрен приложением N 3 к Правилам.
