--- a/2.1_.md
+++ b/2.1_.md
@@ -19,12 +19,13 @@ submenu: true
 
 - а) работы на высоте с применением средств подмащивания (например, леса, подмости, вышки, люльки, лестницы и другие средства подмащивания), а также работы, выполняемые на площадках с защитными ограждениями высотой 1,1 м и более;
 - б) работы без применения средств подмащивания, выполняемые на высоте 5 м и более, а также работы, выполняемые на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м.
-(п. 3.1 введен Приказом Минтруда России от 17.06.2015 N 383н) (ссылка на Буфер № 6.2.2.1.)
+(п. 3.1. Приказа от 28 марта 2014 г. {% include el-pdf.html text="N 155н" name="N 155н.pdf" %} ОБ УТВЕРЖДЕНИИ ПРАВИЛ ПО ОХРАНЕ ТРУДА ПРИ РАБОТЕ НА ВЫСОТЕ (в ред. Приказа Минтруда России от 17.06.2015 N 383н))
 
-Работникам, допускаемым к работам без применения средств подмащивания, выполняемые на высоте 5 м и более, а также выполняемым на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м, по заданию работодателя на производство работ выдается оформленный на специальном бланке наряд-допуск на производство работ (далее - наряд-допуск), рекомендуемый образец которого предусмотрен приложением N 3 к Правилам.
+` ` Работникам, допускаемым к работам без применения средств подмащивания, выполняемые на высоте 5 м и более, а также выполняемым на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м, по заданию работодателя на производство работ выдается оформленный на специальном бланке наряд-допуск на производство работ (далее - наряд-допуск), рекомендуемый образец которого предусмотрен приложением N 3 к Правилам.
 
-Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.
-Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
+` ` Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.
 
-Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах. 
+` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
+
+*Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.* 
 
