--- a/2.2_.md
+++ b/2.2_.md
@@ -5,11 +5,11 @@ sortid: 2.2
 submenu: true
 ---
 
-Что такое замкнутое пространство?
-Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:
-Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;
-Недостатку кислорода или его избыточному содержанию;
-Может стать причиной поглощения;
+### Что такое замкнутое пространство?  
+Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
+Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
+Недостатку кислорода или его избыточному содержанию;  
+Может стать причиной поглощения;  
 Может иметь ограниченные средства для входа и выхода.
 
 Примеры замкнутых пространств:
