--- a/2.2_.md
+++ b/2.2_.md
@@ -6,16 +6,16 @@ submenu: true
 ---
 
 ### Что такое замкнутое пространство?  
-Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
+` ` Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
 Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
 Недостатку кислорода или его избыточному содержанию;  
 Может стать причиной поглощения;  
 Может иметь ограниченные средства для входа и выхода.
 
-Примеры замкнутых пространств:
-Резервуары для хранения, автоцистерны, котлы, бункеры, трубопроводы и другие отсеки резервуарного типа;
-Открытые: полости, ямы;
-Стволы шахт и тоннели;
+### Примеры замкнутых пространств: 
+Резервуары для хранения, автоцистерны, котлы, бункеры, трубопроводы и другие отсеки резервуарного типа;  
+Открытые: полости, ямы;  
+Стволы шахт и тоннели;  
 
 
 
