--- a/2.2_.md
+++ b/2.2_.md
@@ -5,62 +5,63 @@ sortid: 2.2
 submenu: true
 ---
 
-### Что такое замкнутое пространство?  
-` ` Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
+#### Что такое замкнутое пространство?  
+Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
 Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
 Недостатку кислорода или его избыточному содержанию;  
 Может стать причиной поглощения;  
 Может иметь ограниченные средства для входа и выхода.
 
-### Примеры замкнутых пространств: 
+#### Примеры замкнутых пространств: 
 Резервуары для хранения, автоцистерны, котлы, бункеры, трубопроводы и другие отсеки резервуарного типа;  
 Открытые: полости, ямы;  
 Стволы шахт и тоннели;  
 
 
+Работы связанных с ограниченными пространствами, можно разделить на три вида:  
+- Вход;  
+- Спуск;  
+- Спасательные работы.
 
-Работы связанных с ограниченными пространствами, можно разделить на три вида:
-Вход;
-Спуск;
-Спасательные работы.
+#### Вход через точку доступа.  
+` ` Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
 
-Вход через точку доступа
-Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
+` ` **Замкнутые пространства опасны.** 
+` ` Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
 
-Замкнутые пространства опасны. Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
+#### Опасное состояние атмосферы. 
+` ` Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
 
-Опасное состояние атмосферы 
-Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
-Степень опасности: Опасная атмосфера.
-Атмосфера, которая может подвергнуть работника риску смерти, травмы или острой болезни или лишить работника возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя). 
-Степень опасности: Умеренно-опасная атмосфера.
-Атмосфера, воздух которой содержит посторонние примеси, но при вдыхании не подвергает смертельному риску работника, а также не лишает возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).
-Степень опасности: Неопасная атмосфера. 
+` ` Степень опасности: *Опасная атмосфера.*
+Атмосфера, которая может подвергнуть работника риску смерти, травмы или острой болезни или лишить работника возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).   
+` ` Степень опасности: *Умеренно-опасная атмосфера.*
+Атмосфера, воздух которой содержит посторонние примеси, но при вдыхании не подвергает смертельному риску работника, а также не лишает возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).  
+` ` Степень опасности: *Неопасная атмосфера.* 
 Атмосфера, которая содержит чистый воздух, и при этом отсутствует опасность ухудшения его свойств во время работы.
 
-Основные (первостепенные) требования безопасности при работе в замкнутом пространстве:
-— работы в замкнутом пространстве необходимо выполнять, только если отсутствует альтернативный способ выполнения работы без привлечения человека;
-— произведено отключение всех видов источников энергии и коммуникаций;
-— постоянно контролируется состояние газовоздушной среды;
-— помимо основного работника привлечены два страхующих;
-— емкости и оборудование заземлены;
+` ` **Основные** (первостепенные) **требования безопасности** при работе в замкнутом пространстве:  
+— работы в замкнутом пространстве необходимо выполнять, только если отсутствует альтернативный способ выполнения работы без привлечения человека;  
+— произведено отключение всех видов источников энергии и коммуникаций;  
+— постоянно контролируется состояние газовоздушной среды;  
+— помимо основного работника привлечены два страхующих;  
+— емкости и оборудование заземлены;  
 — работник, входящий в замкнутое пространство для забора проб воздуха, должен использовать средство индивидуальной защиты органов дыхания (автономный дыхательный аппарат или шланговый противогаз).
 
-Работники допускаются к работе в ОЗП после проведения: (Постановление Минтруда России и Минобразования России от 13 января 2003 г. № 1/29 «Об утверждении Порядка обучения по охране труда и проверки знаний требований охраны труда работников организаций» (зарегистрировано Министерством юстиции Российской Федерации 12 февраля 2003 г., регистрационный № 4209) с изменениями, внесенными приказом Минтруда России и Минобрнауки России от 30 ноября 2016 г. № 697н/1490 (зарегистрирован Министерством юстиции Российской Федерации 16 декабря 2016 г., регистрационный № 44767). )
-а) обучение требованиям охраны труда в организациях, аккредитованных в установленном порядке, (далее - обучающие организации) и (или) у работодателя; 
-б) обучения безопасным методам и приемам выполнения работ;  
-в) стажировки на рабочем месте; 
-г) инструктажей по охране труда; 
+` ` **Работники допускаются к работе в ОЗП после проведения:** *(Постановление Минтруда России и Минобразования России от 13 января 2003 г. {% include el-pdf.html text="№ 1/29" name="Постановление № 1-29.pdf" %} «Об утверждении Порядка обучения по охране труда и проверки знаний требований охраны труда работников организаций» (зарегистрировано Министерством юстиции Российской Федерации 12 февраля 2003 г., регистрационный № 4209) с изменениями, внесенными приказом Минтруда России и Минобрнауки России от 30 ноября 2016 г. № 697н/1490 (зарегистрирован Министерством юстиции Российской Федерации 16 декабря 2016 г., регистрационный № 44767))*  
+а) обучение требованиям охраны труда в организациях, аккредитованных в установленном порядке, (далее - обучающие организации) и (или) у работодателя;   
+б) обучения безопасным методам и приемам выполнения работ;    
+в) стажировки на рабочем месте;   
+г) инструктажей по охране труда;   
 д) обучения оказанию первой помощи пострадавшим. 
 
-Работники, допускаемые к работам в ОЗП, делятся на следующие 3 группы по безопасности работ в ОЗП: 
-1 группа - работники, допускаемые к непосредственному выполнению работ в ОЗП в составе бригады или под непосредственным контролем работника, назначенного приказом работодателя; понимающие риски, рабочие процедуры и план производства работ, и прочие необходимые организационно-технические документы; умеющие проводить самоспасение и под руководством работников 
-2-й группы проводить работы по спасению и эвакуации других работников; умеющие пользоваться средствами коллективной и индивидуальной защиты; умеющие поддерживать связь со наблюдающим (работник, находящейся снаружи ОЗП, осуществляющий контроль за работниками, работающими в ОЗП); 2 группа - ответственные исполнители работ в ОЗП; наблюдающие; специалисты по оценке параметров среды ОЗП, в т.ч. загазованности; работники, ответственно руководящие спасением и эвакуацией, а также сами квалифицированно выполняющие эвакуацию и спасение (далее – специалисты по спасению); а также мастера, бригадиры, осматривающие место проведения работ, обеспечивающие подготовку к работе, умеющие определить опасности перед началом работ; обеспечивающие безопасность работ в ОЗП во время их выполнения 
-3 группа - работники, назначаемые работодателем ответственными за безопасную организацию и проведение работ в ОЗП (далее – работники 3 группы); должностные лица, имеющие право выдавать наряд-допуск
+` ` Работники, допускаемые к работам в ОЗП, делятся на следующие 3 группы по безопасности работ в ОЗП:   
+**1 группа** - работники, допускаемые к непосредственному выполнению работ в ОЗП в составе бригады или под непосредственным контролем работника, назначенного приказом работодателя; понимающие риски, рабочие процедуры и план производства работ, и прочие необходимые организационно-технические документы; умеющие проводить самоспасение и под руководством работников.   
+**2-й группы** проводить работы по спасению и эвакуации других работников; умеющие пользоваться средствами коллективной и индивидуальной защиты; умеющие поддерживать связь со наблюдающим (работник, находящейся снаружи ОЗП, осуществляющий контроль за работниками, работающими в ОЗП); 2 группа - ответственные исполнители работ в ОЗП; наблюдающие; специалисты по оценке параметров среды ОЗП, в т.ч. загазованности; работники, ответственно руководящие спасением и эвакуацией, а также сами квалифицированно выполняющие эвакуацию и спасение (далее – специалисты по спасению); а также мастера, бригадиры, осматривающие место проведения работ, обеспечивающие подготовку к работе, умеющие определить опасности перед началом работ; обеспечивающие безопасность работ в ОЗП во время их выполнения.   
+**3 группа** - работники, назначаемые работодателем ответственными за безопасную организацию и проведение работ в ОЗП (далее – работники 3 группы); должностные лица, имеющие право выдавать наряд-допуск.
 
-Команда включает в себя высококвалифицированных операторов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для входа и спасения людей. 
+` ` Наша команда включает в себя высококвалифицированных операторов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для входа и спасения людей. 
 
 
-Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.
+*Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.*
 
-Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
+` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
