--- a/2.2_.md
+++ b/2.2_.md
@@ -26,17 +26,17 @@ submenu: true
 #### Вход через точку доступа.  
 ` ` Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
 
-` ` **Замкнутые пространства опасны.** 
+` ` **Замкнутые пространства опасны.**   
 ` ` Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
 
 #### Опасное состояние атмосферы. 
 ` ` Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
 
-` ` Степень опасности: *Опасная атмосфера.*
+- Степень опасности: **Опасная атмосфера.**
 Атмосфера, которая может подвергнуть работника риску смерти, травмы или острой болезни или лишить работника возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).   
-` ` Степень опасности: *Умеренно-опасная атмосфера.*
+- Степень опасности: **Умеренно-опасная атмосфера.**
 Атмосфера, воздух которой содержит посторонние примеси, но при вдыхании не подвергает смертельному риску работника, а также не лишает возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).  
-` ` Степень опасности: *Неопасная атмосфера.* 
+- Степень опасности: **Неопасная атмосфера.** 
 Атмосфера, которая содержит чистый воздух, и при этом отсутствует опасность ухудшения его свойств во время работы.
 
 ` ` **Основные** (первостепенные) **требования безопасности** при работе в замкнутом пространстве:  
@@ -55,13 +55,13 @@ submenu: true
 д) обучения оказанию первой помощи пострадавшим. 
 
 ` ` Работники, допускаемые к работам в ОЗП, делятся на следующие 3 группы по безопасности работ в ОЗП:   
-**1 группа** - работники, допускаемые к непосредственному выполнению работ в ОЗП в составе бригады или под непосредственным контролем работника, назначенного приказом работодателя; понимающие риски, рабочие процедуры и план производства работ, и прочие необходимые организационно-технические документы; умеющие проводить самоспасение и под руководством работников.   
-**2-й группы** проводить работы по спасению и эвакуации других работников; умеющие пользоваться средствами коллективной и индивидуальной защиты; умеющие поддерживать связь со наблюдающим (работник, находящейся снаружи ОЗП, осуществляющий контроль за работниками, работающими в ОЗП); 2 группа - ответственные исполнители работ в ОЗП; наблюдающие; специалисты по оценке параметров среды ОЗП, в т.ч. загазованности; работники, ответственно руководящие спасением и эвакуацией, а также сами квалифицированно выполняющие эвакуацию и спасение (далее – специалисты по спасению); а также мастера, бригадиры, осматривающие место проведения работ, обеспечивающие подготовку к работе, умеющие определить опасности перед началом работ; обеспечивающие безопасность работ в ОЗП во время их выполнения.   
-**3 группа** - работники, назначаемые работодателем ответственными за безопасную организацию и проведение работ в ОЗП (далее – работники 3 группы); должностные лица, имеющие право выдавать наряд-допуск.
+- **1 группа** - работники, допускаемые к непосредственному выполнению работ в ОЗП в составе бригады или под непосредственным контролем работника, назначенного приказом работодателя; понимающие риски, рабочие процедуры и план производства работ, и прочие необходимые организационно-технические документы; умеющие проводить самоспасение и под руководством работников.   
+- **2-й группы** проводить работы по спасению и эвакуации других работников; умеющие пользоваться средствами коллективной и индивидуальной защиты; умеющие поддерживать связь со наблюдающим (работник, находящейся снаружи ОЗП, осуществляющий контроль за работниками, работающими в ОЗП); 2 группа - ответственные исполнители работ в ОЗП; наблюдающие; специалисты по оценке параметров среды ОЗП, в т.ч. загазованности; работники, ответственно руководящие спасением и эвакуацией, а также сами квалифицированно выполняющие эвакуацию и спасение (далее – специалисты по спасению); а также мастера, бригадиры, осматривающие место проведения работ, обеспечивающие подготовку к работе, умеющие определить опасности перед началом работ; обеспечивающие безопасность работ в ОЗП во время их выполнения.   
+- **3 группа** - работники, назначаемые работодателем ответственными за безопасную организацию и проведение работ в ОЗП (далее – работники 3 группы); должностные лица, имеющие право выдавать наряд-допуск.
 
 ` ` Наша команда включает в себя высококвалифицированных операторов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для входа и спасения людей. 
 
 
-*Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.*
+` ` *Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.*
 
 ` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
